# Aurora_Backend

./: LICENSE  README.md  pyproject.toml  test.py  test_email.py
config/: celery.py  router.py  settings.py  urls.py
core/aurora/: admin.py  apps.py  router.py
core/aurora/filter/: filter_comments.py  filter_replies.py
core/aurora/migrations/: 0001_initial.py  0002_comments.py  0003_replies.py  0004_alter_comments_user.py  0005_reactions.py  0006_replieofreplie.py  0007_replieofreplie_replyofreply.py
core/aurora/models/: __init__.py  comments.py  posts.py  reactions.py  replies.py
core/aurora/serializers/: __init__.py  comments.py  posts.py  reactions.py  replies.py
core/aurora/views/: __init__.py  comments.py  posts.py  reactions.py  replies.py
core/authentication/: admin.py  apps.py  router.py  signals.py  tasks.py
core/authentication/filters/: __init__.py  student.py  user.py
core/authentication/migrations/: 0001_initial.py  0002_alter_user_password.py  0003_office_guildmember_student.py  0004_rename_guildmember_guildmemberdata_and_more.py  0005_alter_guildmemberdata_office_and_more.py  0006_alter_student_is_guild_member.py  0007_alter_guildmemberdata_year_active_and_more.py  0007_user_perfil_alter_guildmemberdata_year_active_and_more.py  0008_alter_user_options_alter_user_managers.py  0009_alter_user_managers.py  0010_remove_student_is_guild_member_and_more.py  0011_alter_office_description.py  0012_alter_guildmemberdata_year_active.py
core/authentication/models/: __init__.py  guild_member.py  servant.py  student.py  user.py
core/authentication/serializers/: __init__.py  guild_member.py  student.py  user.py
core/authentication/utils/: __init__.py  alter_guild_member.py  turma_select.py  verification_email.py
core/authentication/views/: __init__.py  guild_member.py  student.py  user.py  verify.py
core/uploader/: admin.py  helpers.py  models.py  router.py  serializers.py  views.py
core/uploader/migrations/: 0001_initial.py  0002_alter_image_public_id.py  0003_document_alter_image_description.py  0004_video.py
core/uploader/models/: __init__.py  document.py  image.py  video.py
core/uploader/serializers/: __init__.py  document.py  image.py  video.py
core/uploader/views/: __init__.py  document.py  image.py  video.py
tests/: testepi.py
