[project]
name = "Aurora_Backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "AnthonyLoche", email = "anthonylocheifc@gmail.com"},
    {name = "JonatasPeraza", email = "jonatassilvaperaza@gmail.com"},
    {name = "", email = ""},
]
dependencies = [
    "django>=5.1.5",
    "djangorestframework>=3.15.2",
    "django-cors-headers>=4.6.0",
    "drf-spectacular>=0.28.0",
    "python-dotenv>=1.0.1",
    "djangorestframework-simplejwt>=5.4.0",
    "django-filter>=24.3",
    "cloudinary>=1.42.1",
    "django-cloudinary-storage>=0.3.0",
    "pydotplus>=2.0.2",
    "django-extensions>=3.2.3",
    "graphviz>=0.20.3",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = true

[tool.pdm.scripts]
dev = "python manage.py runserver"
runserver = "python manage.py runserver"
createsuperuser = "python manage.py createsuperuser"
changepassword = "python manage.py changepassword"
migrate = "python manage.py migrate"
makemigrations = "python manage.py makemigrations"
shell = "python manage.py shell"
test = "python manage.py test"
startapp = "python manage.py startapp {args}"
loaddata = "python manage.py loaddata {args}"
dumpdata = "python manage.py dumpdata {args}"
model = "python manage.py graph_models -a -g -o models.png"
populate = "python manage.py populate"
req = "pdm export -f requirements --without-hashes -o requirements.txt"